third_party/move/move-compiler-v2/tests/checking/typing/block_with_statements_invalid.exp

Diagnostics:
error: expected `bool` but found `integer`
  ┌─ tests/checking/typing/block_with_statements_invalid.move:4:23
  │
4 │         ({ let x = 0; x } : bool);
  │                       ^

error: expected `u64` but found `&?6`
  ┌─ tests/checking/typing/block_with_statements_invalid.move:5:23
  │
5 │         ({ let x = 0; &x } : u64);
  │                       ^^

error: expected `()` but found `&mut ?10`
  ┌─ tests/checking/typing/block_with_statements_invalid.move:6:23
  │
6 │         ({ let y = 0; &mut (y + 1) } : ());
  │                       ^^^^^^^^^^^^

error: expected 2 item(s), found 3
  ┌─ tests/checking/typing/block_with_statements_invalid.move:8:23
  │
8 │         ({ let x = 0; (x, false, false) } : (u64, bool));
  │                       ^^^^^^^^^^^^^^^^^
